--- a/playground/game.html
+++ b/playground/game.html
@@ -12,6 +12,7 @@
 <body>
 
 <!-- TODO 23Mar2019: figure out some sort of cache buster (appending hash or date) -->
+<script type="text/javascript" src="./js/Globals.js"></script>
 <script type="text/javascript" src="./js/preload.js"></script>
 <script type="text/javascript" src="./js/create.js"></script>
 <script type="text/javascript" src="./js/update.js"></script>
